tirando coisas desnecessarias e adicionado resumo